fix/checkout notification z-index

--- a/front-end/src/pages/CheckoutPage/index.module.css
+++ b/front-end/src/pages/CheckoutPage/index.module.css
@@ -114,6 +114,7 @@
   border-radius: 0.2rem;
   transition: 1s ease;
   animation: finishNotification 0.3s;
+  z-index: 3;
 }
 
 @media only screen and (max-width: 600px) {
